apps/media/jellyfin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          ports:
            - containerPort: 8096
          # resources:
          #   requests:
          #     memory: "512Mi"
          #     cpu: "500m"
          #   limits:
          #     memory: "4Gi"
          #     cpu: "4000m"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: media
          nfs:
            server: 192.168.178.59
            path: /mnt/Storage_new/jellyfin
