apps/media/jellyfin/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyfin.thijsvdweijer.nl`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.thijsvdweijer.nl`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: jellyfin-tls
